# redis-nav

./: .gitignore  Cargo.toml  README.md  config.example.toml  docker-compose.yml
docs/plans/: 2026-01-06-redis-nav-design.md  2026-01-06-redis-nav-implementation.md
scripts/: seed-redis.sh
src/: app.rs  lib.rs  main.rs
src/config/: cli.rs  file.rs  mod.rs
src/editor/: mod.rs
src/format/: mod.rs
src/redis_client/: mod.rs
src/tree/: mod.rs
src/ui/: dialogs.rs  info_bar.rs  layout.rs  mod.rs  theme.rs  tree_view.rs  value_view.rs
tests/: format_test.rs  tree_builder_test.rs
