[package]
name = "redis-nav"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for browsing and editing Redis databases"
license = "MIT"
authors = ["redis-nav contributors"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# CLI & Config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Syntax highlighting
syntect = "5"

# Utilities
thiserror = "2"
anyhow = "1"
dirs = "5"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
